# wxcam

./: CMakeLists.txt  README.md
include/: App.h  CameraPanel.h  MainFrame.h
src/: App.cpp  CameraPanel.cpp  MainFrame.cpp
